apps/cnpg/others/route-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-route-cluster-rw
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`pg.myr-project.eu`)
      services:
        - name: cluster-rw
          port: 5432
  tls:
    secretName: pg-ingressroute-certificate
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress-route-cluster-ro
  namespace: database
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`pg-read.myr-project.eu`)
      services:
        - name: cluster-ro
          port: 5432
  tls:
    secretName: pg-read-ingressroute-certificate
